# aubo_ros2_driver

./: .gitmodules
aubo_gazebo/: package.xml
aubo_gazebo/config/: aubo_controllers.yaml
aubo_gazebo/launch/: aubo_gazebo.launch.py
aubo_moveit_config/: CMakeLists.txt  package.xml
aubo_moveit_config/config/: aubo_robot.srdf  joint_limits.yaml  kinematics.yaml  moveit.rviz  ompl_planning.yaml  planning_scene.yaml  view_robot.rviz
aubo_moveit_config/include/aubo_moveit_config/: moveit_executor.hpp
aubo_moveit_config/launch/: aubo_moveit.launch.py
aubo_moveit_config/src/: moveit_executor_node.cpp
aubo_moveit_config/test/: test_executor_srv.py
aubo_msgs/: CMakeLists.txt
aubo_msgs/srv/: SetPoseStampedGoal.srv
aubo_ros2_driver/config/: aubo_controllers.yaml
aubo_ros2_driver/launch/: aubo_control.launch.py
ros_joints_plan/: package.xml
